--- a/src/Components/product.css
+++ b/src/Components/product.css
@@ -4,12 +4,11 @@
     margin: 30px;
     padding: 10px;
     align-self: center;
-    width: auto;
-    height: auto;
+    width: 250px;
+    height: 350px;
     /* background-color: rgba(255, 108, 132, 0.55) !important; */
     box-shadow: 1px 1px 1px 1px;
     /* z-index: 0; */
-    border-radius: 6%;
     transition: linear 0.1s;
 }
 
@@ -17,32 +16,30 @@
     display: block;
     position: relative;
     margin: 30px;
-    padding: 10px;
+    /* padding: 10px; */
     align-self: center;
-    width: auto;
-    height: auto;
+    /* width: auto; */
     /* background-color: red; */
     zoom: 1%;
     box-shadow: 3px 3px 3px 3px;
 }
 
 .product-img {
-    position: relative;
-    left: -84px;
-    top: 10px;
-    bottom: auto;
+    text-align: center;
+    height: 70%;
+    width: 100%;
 }
 
 .product-name {
-    display: block;
-    position: relative;
+    /* position: relative; */
     bottom: 9px;
     left: 0px;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     font-family: courier;
     color: black;
+    overflow-x: hidden;
 }
 
 .product-type {
@@ -63,12 +60,9 @@
 }
 
 .product-price {
-    display: block;
-    position: relative;
-    bottom: 220px;
-    left: 60px;
     color: red;
     font-size: 20px;
+    text-align: right;
 }
 
 .product-details {
@@ -80,19 +74,20 @@
 .gallary {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    overflow: scroll;
+    overflow-y: scroll;
+    height: 800px;
 }
 
 .gallary-container {
     display: block;
     border: cyan;
-    height: 790px;
-    width: 100%;
+    height: 80%;
+    width: 80%;
     overflow-y: scroll;
     margin: auto;
     /* margin-top: 10px; */
     border-radius: 1%;
-    box-shadow: 1px 1px 1px 1px;
+    /* box-shadow: 1px 1px 1px 1px; */
     z-index: -1;
     /* background-color: #2196F399; */
 }
