--- a/src/Components/showCase.css
+++ b/src/Components/showCase.css
@@ -1,39 +1,3 @@
-#slider {
-    width: 100%;
-    height: 500px;
-    position: relative;
-    overflow: hidden;
-}
-
-.slides {
-    width: 400%;
-    height: 100%;
-    position: relative;
-    -webkit-animation: slide 30s infinite;
-    -moz-animation: slide 30s infinite;
-    animation: slide 30s infinite;
-}
-
-.slider {
-    width: 25%;
-    height: 100%;
-    float: left;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.slide img {
-    width: 100%;
-    height: 100%;
-}
-
-.image {
-    width: 100%;
-    height: 100%;
-}
-
-.image img {
-    width: 100%;
-    height: 100%;
+.item {
+    z-index: 0;
 }
